<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | 张峻铭>
    2019（原型框架）2021（正式命名TinUI发布）

==========更新日志==========


==========3.3x==========
2022-9-

==========3.30==========
2022-8-27
1. tooltip新增delay参数，允许延时显示
2. textbox添加相关方法
3. 网站同步changelog
4. TinUIXml添加environment方法，用以快速导入funcs和datas
5. onoff重写，采用新样式，增加相关方法
6. scrollbar样式对称，不使用时保持静默状态

==========3.24==========
2022-8-20
1. 修复横向scrollbar最大值滚动问题
2. 更新pipspager标识符样式
3. 修复pipspager向左越界移动的问题
4. 版权更新
5. 添加此文件

==========3.23==========
2022-8-13
1. 增加entry方法
2. 增加entry测试文件
3. 更新ratingbar功能
4. link控件如果接受一个超链接，则显示链接地址
5. info/tooltip指定文本宽度

==========3.22==========
2022-8-6
1. 新增可折叠UI元素控件 expander

==========3.21==========
2022-7-30
1. 修复若干问题
2. 优化menu首次点击明显位移问题

==========3.20==========
2022-7-24
1. 防止三种waitbar元素名称重合
2. 添加圆角按钮 button2
3. 更新tooltip的圆角样式
4. info改为封装tooltip

==========2.16==========
2022-7-17
1. 添加支点标题组件 pivot

==========3.15==========
2022-7-13
1. 更新waitbar1的样式
2. 增加waitbar3的视觉效果
3. notebook可以更改标题名称

==========3.13==========
2022-7-3
1. 重新添加新的table最大宽度参数
2. notebook可指定是否响应新界面按钮

==========3.11==========
2022-6-26
1. 修复menu分割线，使用独立的线段绘制
2. 新增便笺控件 notecard
3. 在readme上添加示例代码

==========3.10==========
2022-6-19
1. 增加FuncList类统一管理返回函数
2. table新增maxwidth参数
3. 修改notebook样式
4. notebook新增界面可决定是否能删除

==========3.9==========
2022-6-5
1. 优化menu逻辑
2. 新增单选组控件 radiobox
3. scalebar标识线段圆角
4. 调整radiobox标识样式
5. 添加radiobox样式

==========3.7==========
2022-5-29
1. 添加TinUIEvent事件管理
2. 更新scalebar样式，启用WinUI3样式
3. 优化checkbutton标识符比例

==========3.6==========
2022-5-15
1. 完善TinUITheme类对于TinUIXml的契合度
2. 添加separate出现动画
3. 修复ratingbar糙度问题
4. link圆角背景
5. link添加目标函数，最高优先级

==========3.5==========
2022-5-8
1. 修复menu延迟动画问题
2. 更新配色样式

==========3.4==========
2022-5-3
1. menu滚动动画
2. 更新entry样式，启用WinUI3样式
3. 添加评星级控件 ratingbar

==========3.3==========
2022-4-30
1. 添加标签栏视图 notebook

==========3.1==========
2022-4-17
1. 更新checkbutton样式
2. uid的定义均改外字符串