@@ -6,7 +6,9 @@
 
 
 ==========3.3x==========
-2022-9-
+2022-9
+1. onoff移动动画
+2. 创建TinUIWidget类，用来显示单个元素控件
 
 ==========3.30==========
 2022-8-27
